feat: character 도메인 관련 컴포넌트 이동 및 수정
- 기존 AddCharacterDialog -> CharacterAddDialog 수정
- useAccountStore에서 useCharacterStore로 캐릭터 추가 로직 분리
- 서버 목록을 상수(SERVER_LIST)로 만들어 유지보수성 개선
- CharacterCard 컴포넌트 캐릭터 정보 직업에 맞는 이미지 렌더링 및 UI 개선
- 캐릭터 슬라이드 Style 수정

--- a/src/index.css
+++ b/src/index.css
@@ -157,3 +157,27 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+.swiper {
+  @apply rounded-md
+}
+
+.custom-bullet {
+  background-color: #EEC6B2 !important;
+}
+
+.custom-bullet-active {
+  background-color: #F29325 !important;
+}
+
+.dark .custom-bullet {
+  background-color: #424242 !important;
+}
+
+.dark .custom-bullet-active {
+  background-color: #757575 !important;
+}
+
+.custom-header-button {
+  @apply relative text-base hover:bg-transparent text-black/50 dark:text-white hover:text-primary after:content-[''] after:absolute after:bottom-0 after:left-0 after:w-full after:h-[2px] after:bg-primary dark:after:bg-white after:scale-x-0 hover:after:scale-x-100 after:origin-left after:transition-transform
+}
