--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -197,3 +197,122 @@
     animation: slide-in-from-right 0.2s ease-out forwards;
   }
 }
+
+@layer components {
+  .gsi-material-button {
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    -webkit-appearance: none;
+    background-color: #ffffff;
+    /* 라이트 모드 기본: 흰색 */
+    background-image: none;
+    border: 1px solid #747775;
+    border-radius: 4px;
+    box-sizing: border-box;
+    color: #1F1F1F;
+    cursor: pointer;
+    font-family: 'Roboto', arial, sans-serif;
+    font-size: 14px;
+    height: 40px;
+    letter-spacing: 0.25px;
+    outline: none;
+    overflow: hidden;
+    padding: 0 12px;
+    position: relative;
+    text-align: center;
+    transition: background-color .218s, border-color .218s, box-shadow .218s;
+    vertical-align: middle;
+    white-space: nowrap;
+    width: auto;
+    max-width: 400px;
+    min-width: min-content;
+  }
+
+  .gsi-material-button .gsi-material-button-icon {
+    height: 20px;
+    margin-right: 12px;
+    min-width: 20px;
+    width: 20px;
+  }
+
+  .gsi-material-button .gsi-material-button-content-wrapper {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    height: 100%;
+    justify-content: center;
+    position: relative;
+    width: 100%;
+  }
+
+  .gsi-material-button .gsi-material-button-contents {
+    flex-grow: 0;
+    font-family: 'Roboto', arial, sans-serif;
+    font-weight: 500;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    vertical-align: top;
+  }
+
+  .gsi-material-button .gsi-material-button-state {
+    transition: opacity .218s;
+    bottom: 0;
+    left: 0;
+    opacity: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  .gsi-material-button:disabled {
+    cursor: default;
+    background-color: #f1f3f4;
+    border-color: #dadce0;
+  }
+
+  .gsi-material-button:disabled .gsi-material-button-contents,
+  .gsi-material-button:disabled .gsi-material-button-icon {
+    opacity: 0.38;
+  }
+
+  .gsi-material-button:not(:disabled):active .gsi-material-button-state,
+  .gsi-material-button:not(:disabled):focus .gsi-material-button-state {
+    background-color: black;
+    opacity: 0.12;
+  }
+
+  .gsi-material-button:not(:disabled):hover {
+    box-shadow: 0 1px 2px 0 rgba(60, 64, 67, .30),
+      0 1px 3px 1px rgba(60, 64, 67, .15);
+  }
+
+  .gsi-material-button:not(:disabled):hover .gsi-material-button-state {
+    background-color: black;
+    opacity: 0.08;
+  }
+
+  /* ✅ 다크 모드 스타일 */
+  .dark .gsi-material-button {
+    background-color: #131314;
+    border: 1px solid #8E918F;
+    color: #e3e3e3;
+  }
+
+  .dark .gsi-material-button:disabled {
+    background-color: #13131461;
+    border-color: #8e918f1f;
+  }
+
+  .dark .gsi-material-button:not(:disabled):active .gsi-material-button-state,
+  .dark .gsi-material-button:not(:disabled):focus .gsi-material-button-state {
+    background-color: white;
+    opacity: 0.12;
+  }
+
+  .dark .gsi-material-button:not(:disabled):hover .gsi-material-button-state {
+    background-color: white;
+    opacity: 0.08;
+  }
+}
